--- a/src/vs14/GstKaldiOnline2.vcxproj
+++ b/src/vs14/GstKaldiOnline2.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>No</UseIntelMKL>
+    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -37,14 +37,14 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>No</UseIntelMKL>
+    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>No</UseIntelMKL>
+    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -52,32 +52,32 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>No</UseIntelMKL>
+    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <Import Project="C:\gstreamer\1.0\x86\share\vs\2010\libs\gstreamer-1.0.props" />
+    <Import Project="$(GSTREAMER_1_0_ROOT_X86)share\vs\2010\libs\gstreamer-1.0.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin_win32.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_debug_win32.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <Import Project="C:\gstreamer\1.0\x86_64\share\vs\2010\libs\gstreamer-1.0.props" />
+    <Import Project="$(GSTREAMER_1_0_ROOT_X86_64)share\vs\2010\libs\gstreamer-1.0.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_debug.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <Import Project="C:\gstreamer\1.0\x86\share\vs\2010\libs\gstreamer-1.0.props" />
+    <Import Project="$(GSTREAMER_1_0_ROOT_X86)share\vs\2010\libs\gstreamer-1.0.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin_win32.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_release_win32.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <Import Project="C:\gstreamer\1.0\x86_64\share\vs\2010\libs\gstreamer-1.0.props" />
+    <Import Project="$(GSTREAMER_1_0_ROOT_X86_64)share\vs\2010\libs\gstreamer-1.0.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_release.props" />
     <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
@@ -87,22 +87,22 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build\lib\Release;..\..\..\kaldi\kaldiwin_vs2015_MKL\Debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\..\jansson-2.7\build_win32\lib\Debug;..\..\..\kaldi\kaldiwin_vs2015_MKL\Debug;$(LibraryPath)</LibraryPath>
     <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build\lib\Release;..\..\..\kaldi\kaldiwin_vs2015_MKL\x64\Debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\..\jansson-2.7\build\lib\Debug;..\..\..\kaldi\kaldiwin_vs2015_MKL\x64\Debug;$(LibraryPath)</LibraryPath>
     <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build\lib\Release;..\..\..\kaldi\kaldiwin_vs2015_MKL\Release;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\..\jansson-2.7\build_win32\lib\MinSizeRel;..\..\..\kaldi\kaldiwin_vs2015_MKL\Release;$(LibraryPath)</LibraryPath>
     <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build\lib\Release;..\..\..\kaldi\kaldiwin_vs2015_MKL\x64\Release;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\..\jansson-2.7\build\lib\MinSizeRel;..\..\..\kaldi\kaldiwin_vs2015_MKL\x64\Release;$(LibraryPath)</LibraryPath>
     <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -117,7 +117,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>jansson.lib;pthreadVC2.lib;kaldi-online2.lib;kaldi-lat.lib;kaldi-decoder.lib;kaldi-feat.lib;kaldi-transform.lib;kaldi-gmm.lib;kaldi-hmm.lib;kaldi-tree.lib;kaldi-matrix.lib;kaldi-util.lib;kaldi-base.lib;kaldi-thread.lib;kaldi-lm.lib;kaldi-nnet2.lib;kaldi-cudamatrix.lib;kaldi-ivector.lib;kaldi-fstext.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>jansson_d.lib;pthreadVC2.lib;kaldi-online2.lib;kaldi-lat.lib;kaldi-decoder.lib;kaldi-feat.lib;kaldi-transform.lib;kaldi-gmm.lib;kaldi-hmm.lib;kaldi-tree.lib;kaldi-matrix.lib;kaldi-util.lib;kaldi-base.lib;kaldi-thread.lib;kaldi-lm.lib;kaldi-nnet2.lib;kaldi-cudamatrix.lib;kaldi-ivector.lib;kaldi-fstext.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -132,7 +132,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>jansson.lib;pthreadVC2.lib;kaldi-online2.lib;kaldi-lat.lib;kaldi-decoder.lib;kaldi-feat.lib;kaldi-transform.lib;kaldi-gmm.lib;kaldi-hmm.lib;kaldi-tree.lib;kaldi-matrix.lib;kaldi-util.lib;kaldi-base.lib;kaldi-thread.lib;kaldi-lm.lib;kaldi-nnet2.lib;kaldi-cudamatrix.lib;kaldi-ivector.lib;kaldi-fstext.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>jansson_d.lib;pthreadVC2.lib;kaldi-online2.lib;kaldi-lat.lib;kaldi-decoder.lib;kaldi-feat.lib;kaldi-transform.lib;kaldi-gmm.lib;kaldi-hmm.lib;kaldi-tree.lib;kaldi-matrix.lib;kaldi-util.lib;kaldi-base.lib;kaldi-thread.lib;kaldi-lm.lib;kaldi-nnet2.lib;kaldi-cudamatrix.lib;kaldi-ivector.lib;kaldi-fstext.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -152,6 +152,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>jansson.lib;pthreadVC2.lib;kaldi-online2.lib;kaldi-lat.lib;kaldi-decoder.lib;kaldi-feat.lib;kaldi-transform.lib;kaldi-gmm.lib;kaldi-hmm.lib;kaldi-tree.lib;kaldi-matrix.lib;kaldi-util.lib;kaldi-base.lib;kaldi-thread.lib;kaldi-lm.lib;kaldi-nnet2.lib;kaldi-cudamatrix.lib;kaldi-ivector.lib;kaldi-fstext.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ImageHasSafeExceptionHandlers />
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -185,50 +186,50 @@
     <ClInclude Include="..\kaldimarshal.h" />
     <ClInclude Include="..\simple-options-gst.h" />
   </ItemGroup>
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-		<None Include="..\..\..\kaldi\tools\openfst\MSVC14\Debug\openfst-gd.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="C:\gstreamer-sdk\1.0\x86\bin\libxml2-2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-	</ItemGroup>
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-		<None Include="..\..\..\kaldi\tools\openfst\MSVC14\x64\Debug\openfst64-gd.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="C:\gstreamer-sdk\1.0\x86_64\bin\libxml2-2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-	</ItemGroup>
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-		<None Include="..\..\..\kaldi\tools\openfst\MSVC14\Debug\openfst.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="C:\gstreamer-sdk\1.0\x86\bin\libxml2-2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-	</ItemGroup>
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-		<None Include="..\..\..\kaldi\tools\openfst\MSVC14\x64\Release\openfst64.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-		<None Include="C:\gstreamer-sdk\1.0\x86_64\bin\libxml2-2.dll">
-			<DeploymentContent>false</DeploymentContent>
-		</None>
-	</ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\Debug\openfst-gd.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="$(GSTREAMER_1_0_ROOT_X86)bin\libxml2-2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\x64\Debug\openfst64-gd.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="$(GSTREAMER_1_0_ROOT_X86_64)bin\libxml2-2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\Debug\openfst.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="$(GSTREAMER_1_0_ROOT_X86)bin\libxml2-2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\x64\Release\openfst64.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+    <None Include="$(GSTREAMER_1_0_ROOT_X86_64)bin\libxml2-2.dll">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
