switched from Intel MKL to OpenBLAS

--- a/src/vs14/GstKaldiOnline2.vcxproj
+++ b/src/vs14/GstKaldiOnline2.vcxproj
@@ -58,52 +58,49 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
+  <Import Project="..\..\..\kaldi\windows\variables.props" />
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(GSTREAMER_1_0_ROOT_X86)share\vs\2010\libs\gstreamer-1.0.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin_win32.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_debug_win32.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\kaldiwin_win32.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\openfstwin_debug_win32.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(GSTREAMER_1_0_ROOT_X86_64)share\vs\2010\libs\gstreamer-1.0.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_debug.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\kaldiwin.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\openfstwin_debug.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(GSTREAMER_1_0_ROOT_X86)share\vs\2010\libs\gstreamer-1.0.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin_win32.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_release_win32.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\kaldiwin_win32.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\openfstwin_release_win32.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(GSTREAMER_1_0_ROOT_X86_64)share\vs\2010\libs\gstreamer-1.0.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\kaldiwin.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\openfstwin_release.props" />
-    <Import Project="..\..\..\kaldi\kaldiwin_vs2015_MKL\kaldiwin\variables.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\kaldiwin.props" />
+    <Import Project="$(KALDI)\kaldiwin_vs2015_OpenBLAS\kaldiwin\openfstwin_release.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build_win32\lib\Debug;..\..\..\kaldi\kaldiwin_vs2015_MKL\Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\jansson-2.7\build_win32\lib\Debug;$(KALDI)\kaldiwin_vs2015_OpenBLAS\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(KALDI)\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build\lib\Debug;..\..\..\kaldi\kaldiwin_vs2015_MKL\x64\Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\jansson-2.7\build\lib\Debug;$(KALDI)\kaldiwin_vs2015_OpenBLAS\x64\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(KALDI)\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build_win32\lib\MinSizeRel;..\..\..\kaldi\kaldiwin_vs2015_MKL\Release;$(LibraryPath)</LibraryPath>
-    <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\jansson-2.7\build_win32\lib\MinSizeRel;$(KALDI)\kaldiwin_vs2015_OpenBLAS\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(KALDI)\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>..\..\..\jansson-2.7\build\lib\MinSizeRel;..\..\..\kaldi\kaldiwin_vs2015_MKL\x64\Release;$(LibraryPath)</LibraryPath>
-    <IncludePath>..\..\..\kaldi\src;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\jansson-2.7\build\lib\MinSizeRel;$(KALDI)\kaldiwin_vs2015_OpenBLAS\x64\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(KALDI)\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -111,7 +108,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;HAVE_MKL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>..\..\..\jansson-2.7\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -126,7 +123,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;HAVE_MKL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>..\..\..\jansson-2.7\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -143,7 +140,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;HAVE_MKL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>..\..\..\jansson-2.7\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -163,7 +160,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;HAVE_MKL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;GSTKALDIONLINE2_EXPORTS;HAVE_STRUCT_TIMESPEC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>..\..\..\jansson-2.7\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -187,10 +184,10 @@
     <ClInclude Include="..\simple-options-gst.h" />
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\Debug\openfst-gd.dll">
+    <None Include="$(KALDI)\tools\openfst\MSVC14\Debug\openfst-gd.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
+    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86)bin\libxml2-2.dll">
@@ -198,10 +195,10 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\x64\Debug\openfst64-gd.dll">
+    <None Include="$(KALDI)\tools\openfst\MSVC14\x64\Debug\openfst64-gd.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
+    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86_64)bin\libxml2-2.dll">
@@ -209,10 +206,10 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\Debug\openfst.dll">
+    <None Include="$(KALDI)\tools\openfst\MSVC14\Debug\openfst.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
+    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86)bin\libxml2-2.dll">
@@ -220,10 +217,10 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <None Include="..\..\..\kaldi\tools\openfst\MSVC14\x64\Release\openfst64.dll">
+    <None Include="$(KALDI)\tools\openfst\MSVC14\x64\Release\openfst64.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="..\..\..\kaldi\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
+    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86_64)bin\libxml2-2.dll">
