--- a/src/vs14/GstKaldiOnline2.vcxproj
+++ b/src/vs14/GstKaldiOnline2.vcxproj
@@ -29,7 +29,6 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -37,14 +36,12 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -52,7 +49,6 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <UseIntelMKL>Composer</UseIntelMKL>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -184,10 +180,10 @@
     <ClInclude Include="..\simple-options-gst.h" />
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <None Include="$(KALDI)\tools\openfst\MSVC14\Debug\openfst-gd.dll">
+    <None Include="$(OPENFSTLIB)\Debug\openfst-gd.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
+    <None Include="$(PTHREADW)\dll\x86\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86)bin\libxml2-2.dll">
@@ -195,10 +191,10 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <None Include="$(KALDI)\tools\openfst\MSVC14\x64\Debug\openfst64-gd.dll">
+    <None Include="$(OPENFSTLIB)\x64\Debug\openfst64-gd.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
+    <None Include="$(PTHREADW)\dll\x64\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86_64)bin\libxml2-2.dll">
@@ -206,10 +202,10 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <None Include="$(KALDI)\tools\openfst\MSVC14\Debug\openfst.dll">
+    <None Include="$(OPENFSTLIB)\Debug\openfst.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x86\pthreadVC2.dll">
+    <None Include="$(PTHREADW)\dll\x86\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86)bin\libxml2-2.dll">
@@ -217,10 +213,10 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <None Include="$(KALDI)\tools\openfst\MSVC14\x64\Release\openfst64.dll">
+    <None Include="$(OPENFSTLIB)\x64\Release\openfst64.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
-    <None Include="$(KALDI)\tools\pthreads\Pre-built.2\dll\x64\pthreadVC2.dll">
+    <None Include="$(PTHREADW)\dll\x64\pthreadVC2.dll">
       <DeploymentContent>false</DeploymentContent>
     </None>
     <None Include="$(GSTREAMER_1_0_ROOT_X86_64)bin\libxml2-2.dll">
